force-app/main/default/objects/ReturnDetails__c/ReturnDetails__c.object-meta.xml
<CustomObject>
    <label>ReturnDetails</label>
    <nameField>
        <displayFormat>ReturnDetails-{0}</displayFormat>
        <label>ReturnDetails Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReturnDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>