force-app/main/default/objects/ReturnDetails__c/fields/DamagedPercentage__c.field-meta.xml
<CustomField>
    <fullName>DamagedPercentage__c</fullName>
    <label>DamagedPercentage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>