force-app/main/default/objects/ReturnDetails__c/fields/Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(IssueDetails__r.CopyDetails__r.Status__c , &quot;Return&quot;),
            
        ReturnDate__c  &gt;  IssueDetails__r.DueDate__c  
    ) , 
    (ReturnDate__c  -  IssueDetails__r.DueDate__c)  * 10, 
    IF(
        ISPICKVAL(IssueDetails__r.CopyDetails__r.Status__c , &quot;Lost&quot;), 
        IssueDetails__r.CopyDetails__r.Book__r.Price__c , 
        IF(
            ISPICKVAL(IssueDetails__r.CopyDetails__r.Status__c , &quot;Damaged&quot;), 
            IssueDetails__r.CopyDetails__r.Book__r.Price__c  *  DamagedPercentage__c , 
            0
        ) 
    ) 
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>