force-app/main/default/objects/ReturnDetails__c/fields/IssueDetails__c.field-meta.xml
<CustomField>
    <fullName>IssueDetails__c</fullName>
    <label>IssueDetails</label>
    <referenceTo>IssueDetails__c</referenceTo>
    <relationshipLabel>ReturnDetails</relationshipLabel>
    <relationshipName>ReturnDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>