force-app/main/default/objects/ReturnDetails__c/validationRules/DamagedPercentage_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>DamagedPercentage_rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Damaged&quot;) , ISBLANK( DamagedPercentage__c ) )</errorConditionFormula>
    <errorDisplayField>DamagedPercentage__c</errorDisplayField>
    <errorMessage>If Status is &quot;Damaged&quot;, then DamagedPercentage is requried.</errorMessage>
</ValidationRule>