force-app/main/default/objects/ReturnDetails__c/validationRules/ReturnDate_ruels.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnDate_ruels</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ReturnDate__c &gt;=  IssueDetails__r.DueDate__c )</errorConditionFormula>
    <errorDisplayField>ReturnDate__c</errorDisplayField>
    <errorMessage>ReturnDate must be greater than or equals DueDate of Related IssueDetails Record.</errorMessage>
</ValidationRule>