force-app/main/default/objects/ReturnDetails__c/validationRules/Status_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is be required.</errorMessage>
</ValidationRule>