force-app/main/default/objects/ReturnDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IssueDetails__c</columns>
    <columns>ReturnDate__c</columns>
    <columns>Fine__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>